--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="stylesheet" type="text/css" href="css/contact.css"/>
   <link rel="stylesheet" type="text/css" href="css/milestone.css"/>
+  <link rel="stylesheet" type="text/css" href="css/navbar.css"/>
   <link
     rel="stylesheet"
     type="text/css"
